syntax = "proto3";

package members_service;

service MembersService{
    rpc Ping(PingRequest) returns (PingResponse);
    rpc GetMembers(GetMemberRequest) returns (MemberResponse);
    rpc CreateMember(Member) returns (Empty);
    rpc UpdateMember(Member) returns (Empty);
    rpc DeleteMember(Member) returns (Empty);
}

message Empty {}

message PingRequest {}

message PingResponse{
    string message = 1;
}

message GetMemberRequest{
    string member_name = 1;
}
message CategoryValue{
    string value = 1;
    string status = 2; 
}

message Member {
    string genre_identity = 1;
    uint32 age = 2;
    string fursona_species = 3;
    string color = 4;
    string occupation = 5;
    string sexuality = 6;
    string sign = 7;
    uint32 member_since = 8;
    string birth_date = 9;
    string avatar_url = 10;
    string name = 11;
}

message MemberResponse{
    CategoryValue genre_identity = 1;
    CategoryValue age = 2;
    CategoryValue fursona_species = 3;
    CategoryValue color = 4;
    CategoryValue occupation = 5;
    CategoryValue sexuality = 6;
    CategoryValue sign = 7;
    CategoryValue member_since = 8;
    CategoryValue birth_date = 9;
    string avatar_url = 10;
    string name = 11;
}
